--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -320,7 +320,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Association Generale Chine-Afrique</td>
+      <td>Association Generale Chine-Afrique (Beijing)</td>
       <td>中国-非洲总商会</td>
       <td>Beijing Commission of Commerce</td>
       <td>北京市商务委员会</td>
@@ -331,15 +331,26 @@
       <td>Beijing</td>
     </tr>
     <tr>
-      <td>Association Generale Chine-Afrique</td>
+      <td>Association Generale Chine-Afrique (Liaoning)</td>
       <td>中国-非洲总商会</td>
       <td>Liaoning Department of Commerce</td>
       <td>辽宁省商务厅</td>
       <td>Madagascar</td>
-      <td>NaN</td>
+      <td>Trade</td>
       <td>Liaoning</td>
       <td>2018-11-13</td>
       <td>Liaoning</td>
+    </tr>
+    <tr>
+      <td>Association Generale Chine-Afrique (Sichuan)</td>
+      <td>中国-非洲总商会</td>
+      <td>Sichuan Department of Commerce</td>
+      <td>四川省商务厅</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Sichuan</td>
+      <td>2018-12-19</td>
+      <td>Sichuan</td>
     </tr>
     <tr>
       <td>Australia-China Economic Culture And Technology Development Cooperation</td>
@@ -575,17 +586,6 @@
     <tr>
       <td>Casa Ricci Social Services</td>
       <td>利玛窦社会服务基金会</td>
-      <td>Sichuan Health and Family Planning Commission</td>
-      <td>四川省卫生和计划生育委员会</td>
-      <td>Macau</td>
-      <td>Health, Poverty Alleviation</td>
-      <td>Sichuan</td>
-      <td>2018-07-24</td>
-      <td>Sichuan</td>
-    </tr>
-    <tr>
-      <td>Casa Ricci Social Services</td>
-      <td>利玛窦社会服务基金会</td>
       <td>Yunnan Health and Family Planning Commission</td>
       <td>云南省卫生和计划生育委员会</td>
       <td>Macau</td>
@@ -593,6 +593,17 @@
       <td>Yunnan</td>
       <td>2017-04-10</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Casa Ricci Social Services</td>
+      <td>利玛窦社会服务基金会</td>
+      <td>Sichuan Health and Family Planning Commission</td>
+      <td>四川省卫生和计划生育委员会</td>
+      <td>Macau</td>
+      <td>Health, Poverty Alleviation</td>
+      <td>Sichuan</td>
+      <td>2018-07-24</td>
+      <td>Sichuan</td>
     </tr>
     <tr>
       <td>Caterpillar Foundation</td>
@@ -637,6 +648,17 @@
       <td>Shanghai</td>
       <td>2017-11-09</td>
       <td>Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hunan, Jiangsu, Jiangxi, Shanghai, Yunnan</td>
+    </tr>
+    <tr>
+      <td>CEO Foundation</td>
+      <td>主流梦工场基金</td>
+      <td>Henan Department of Education</td>
+      <td>河南省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, Health, Poverty Alleviation, Youth</td>
+      <td>Henan</td>
+      <td>2018-09-04</td>
+      <td>Henan</td>
     </tr>
     <tr>
       <td>Charity Aid Service Company</td>
@@ -2232,6 +2254,17 @@
       <td>Shanghai</td>
       <td>2017-10-26</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>International Association Volunteers</td>
+      <td>国际志愿者协会</td>
+      <td>Hainan Department of Civil Affairs</td>
+      <td>海南省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, International Relations/Exchange, Law and Governance</td>
+      <td>Hainan</td>
+      <td>2018-03-31</td>
+      <td>Beijing, Fujian, Guangdong, Hainan, Hebei, Jiangsu, Shandong, Shanghai, Tianjin, Zhejiang</td>
     </tr>
     <tr>
       <td>International Chamber of Commerce</td>
@@ -4236,6 +4269,17 @@
       <td>Chongqing, Guizhou, Sichuan, Yunnan</td>
     </tr>
     <tr>
+      <td>Taizhong Strait Exchange Association (TSEA)</td>
+      <td>台中市海峡两岸交流协会</td>
+      <td>Fujian Department of Commerce</td>
+      <td>福建省商务厅</td>
+      <td>Taiwan</td>
+      <td>Economic Development, Trade</td>
+      <td>Fujian</td>
+      <td>2018-12-21</td>
+      <td>Fujian</td>
+    </tr>
+    <tr>
       <td>Thai-Chinese Human Resources Exchange Association</td>
       <td>泰中人才交流协会</td>
       <td>Hunan Department of Commerce</td>
@@ -4267,28 +4311,6 @@
       <td>Sichuan</td>
       <td>2018-11-02</td>
       <td>Sichuan</td>
-    </tr>
-    <tr>
-      <td>CEO Foundation</td>
-      <td>主流梦工场基金</td>
-      <td>Henan Department of Education</td>
-      <td>河南省教育厅</td>
-      <td>Hong Kong</td>
-      <td>Education, Health, Poverty Alleviation, Youth</td>
-      <td>Henan</td>
-      <td>2018-09-04</td>
-      <td>Henan</td>
-    </tr>
-    <tr>
-      <td>International Association Volunteers</td>
-      <td>国际志愿者协会</td>
-      <td>Hainan Department of Civil Affairs</td>
-      <td>海南省民政厅</td>
-      <td>Hong Kong</td>
-      <td>Civil Society Capacity-Building, International Relations/Exchange, Law and Governance</td>
-      <td>Hainan</td>
-      <td>2018-03-31</td>
-      <td>Beijing, Fujian, Guangdong, Hainan, Hebei, Jiangsu, Shandong, Shanghai, Tianjin, Zhejiang</td>
     </tr>
     <tr>
       <td>Tin Ka Ping Foundation</td>
