--- a/piece/2018yearend/2018_RO_Month.html
+++ b/piece/2018yearend/2018_RO_Month.html
@@ -142,7 +142,7 @@ padding:5px;
 
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 //changed bottom margin to allow for rotated x-axis labels
 var margin = {top: 30, right: 20, bottom: 120, left: 80},
