--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -199,6 +199,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>American Heart Association</td>
+      <td>美国心脏协会</td>
+      <td>Ministry of Science and Technology</td>
+      <td>科学技术部</td>
+      <td>United States</td>
+      <td>Education, Health, International Relations/Exchange, Technology</td>
+      <td>Beijing</td>
+      <td>2019-01-02</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>American International Chamber of Commerce (Beijing)</td>
       <td>美国国际商会</td>
       <td>Beijing Commission of Commerce</td>
@@ -245,7 +256,7 @@
     <tr>
       <td>Animals Asia Foundation</td>
       <td>亚洲动物基金有限公司</td>
-      <td>Sichuan Forestry Administration</td>
+      <td>Sichuan National Forestry and Grassland Administration</td>
       <td>四川省林业厅</td>
       <td>Hong Kong</td>
       <td>Animal Protection</td>
@@ -586,17 +597,6 @@
     <tr>
       <td>Casa Ricci Social Services</td>
       <td>利玛窦社会服务基金会</td>
-      <td>Yunnan Health and Family Planning Commission</td>
-      <td>云南省卫生和计划生育委员会</td>
-      <td>Macau</td>
-      <td>Health, Youth</td>
-      <td>Yunnan</td>
-      <td>2017-04-10</td>
-      <td>Yunnan</td>
-    </tr>
-    <tr>
-      <td>Casa Ricci Social Services</td>
-      <td>利玛窦社会服务基金会</td>
       <td>Sichuan Health and Family Planning Commission</td>
       <td>四川省卫生和计划生育委员会</td>
       <td>Macau</td>
@@ -604,6 +604,17 @@
       <td>Sichuan</td>
       <td>2018-07-24</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Casa Ricci Social Services</td>
+      <td>利玛窦社会服务基金会</td>
+      <td>Yunnan Health and Family Planning Commission</td>
+      <td>云南省卫生和计划生育委员会</td>
+      <td>Macau</td>
+      <td>Health, Youth</td>
+      <td>Yunnan</td>
+      <td>2017-04-10</td>
+      <td>Yunnan</td>
     </tr>
     <tr>
       <td>Caterpillar Foundation</td>
@@ -1125,7 +1136,7 @@
     <tr>
       <td>Conservation International</td>
       <td>保护国际基金会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>United States</td>
       <td>Environment</td>
@@ -1378,7 +1389,7 @@
     <tr>
       <td>Ethics Research Institute</td>
       <td>一般社团法人伦理研究所</td>
-      <td>Inner Mongolia Forestry Administration</td>
+      <td>Inner Mongolia Forestry and Grassland Administration</td>
       <td>内蒙古林业厅</td>
       <td>Japan</td>
       <td>Environment, International Relations/Exchange, Youth</td>
@@ -2267,6 +2278,17 @@
       <td>Beijing, Fujian, Guangdong, Hainan, Hebei, Jiangsu, Shandong, Shanghai, Tianjin, Zhejiang</td>
     </tr>
     <tr>
+      <td>International Centre for Diffraction Data (ICDD)</td>
+      <td>国际衍射数据中心</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>United States</td>
+      <td>Education, Technology</td>
+      <td>Beijing</td>
+      <td>2019-01-02</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>International Chamber of Commerce</td>
       <td>法国国际商会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -2335,7 +2357,7 @@
     <tr>
       <td>International Crane Foundation</td>
       <td>国际鹤类基金会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -2357,7 +2379,7 @@
     <tr>
       <td>International Fund for Animal Welfare (IFAW) (Beijing)</td>
       <td>国际爱护动物基金会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>中华人民共和国国家林业局</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -2368,7 +2390,7 @@
     <tr>
       <td>International Fund for Animal Welfare (IFAW) (Yunnan)</td>
       <td>国际爱护动物基金会</td>
-      <td>Yunnan Forestry Department</td>
+      <td>Yunnan Forestry and Grassland Administration</td>
       <td>云南省林业厅</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -2500,7 +2522,7 @@
     <tr>
       <td>Japan Association for Greening Deserts</td>
       <td>特定非营利活动法人日本沙漠绿化实践协会</td>
-      <td>Inner Mongolia Forestry Administration</td>
+      <td>Inner Mongolia Forestry and Grassland Administration</td>
       <td>内蒙古自治区林业厅</td>
       <td>Japan</td>
       <td>Environment</td>
@@ -2672,6 +2694,17 @@
       <td>Beijing</td>
       <td>2017-09-04</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Kadoorie Farm and Botanic Garden</td>
+      <td>嘉道理农场暨植物园</td>
+      <td>National Forestry and Grassland Administration</td>
+      <td>国家林业和草原局</td>
+      <td>Hong Kong</td>
+      <td>Animal Protection, Environment</td>
+      <td>Beijing</td>
+      <td>2019-01-02</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Jiangxi, Sichuan, Yunnan</td>
     </tr>
     <tr>
       <td>Kagoshima Specialty Products Association</td>
@@ -3182,7 +3215,7 @@
     <tr>
       <td>Natural Resources Defense Council</td>
       <td>自然资源保护协会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>United States</td>
       <td>Environment</td>
@@ -3193,7 +3226,7 @@
     <tr>
       <td>Nature Conservancy</td>
       <td>大自然保护协会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -3468,7 +3501,7 @@
     <tr>
       <td>Organization for Industrial, Spiritual, and Cultural Advancement-International</td>
       <td>公益财团法人奥伊斯嘉</td>
-      <td>Inner Mongolia Forestry Administration</td>
+      <td>Inner Mongolia Forestry and Grassland Administration</td>
       <td>内蒙古自治区林业厅</td>
       <td>Japan</td>
       <td>Environment, International Relations/Exchange</td>
@@ -4274,7 +4307,7 @@
       <td>Fujian Department of Commerce</td>
       <td>福建省商务厅</td>
       <td>Taiwan</td>
-      <td>Economic Development, Trade</td>
+      <td>Economic Development, International Relations/Exchange, Trade</td>
       <td>Fujian</td>
       <td>2018-12-21</td>
       <td>Fujian</td>
@@ -4623,7 +4656,7 @@
     <tr>
       <td>WildAid</td>
       <td>野生救援</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>中华人民共和国国家林业局</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -4634,7 +4667,7 @@
     <tr>
       <td>Wildlife Conservation Society (WCS)</td>
       <td>野生生物保护学会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>United States</td>
       <td>Animal Protection, Environment</td>
@@ -4663,6 +4696,17 @@
       <td>Zhejiang</td>
       <td>2017-11-02</td>
       <td>Zhejiang</td>
+    </tr>
+    <tr>
+      <td>World Animal Protection</td>
+      <td>世界动物保护协会</td>
+      <td>Beijing Gardening and Greening Bureau</td>
+      <td>北京市园林绿化局</td>
+      <td>United Kingdom</td>
+      <td>Agriculture, Animal Protection, Disaster Relief, Environment</td>
+      <td>Beijing</td>
+      <td>2019-01-02</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>World Association of Chinese Doctors</td>
@@ -4832,7 +4876,7 @@
     <tr>
       <td>World Wide Fund for Nature</td>
       <td>世界自然基金会</td>
-      <td>State Forestry Administration</td>
+      <td>National Forestry and Grassland Administration</td>
       <td>国家林业局</td>
       <td>Switzerland</td>
       <td>Environment</td>
