--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -287,6 +287,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Asia Industrial Gases Association (AIGA)</td>
+      <td>新加坡亚洲工业气体协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Singapore</td>
+      <td>Environment, Health</td>
+      <td>Shanghai</td>
+      <td>2019-01-16</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>Asia-Europe-Africa Trade and Investment Alliance Promotion Council</td>
       <td>亚欧非贸易投资联合促进会</td>
       <td>Tianjin Commission of Commerce</td>
@@ -725,6 +736,17 @@
       <td>Gansu</td>
       <td>2017-06-14</td>
       <td>Gansu</td>
+    </tr>
+    <tr>
+      <td>Children's Education Foundation</td>
+      <td>台湾财团法人幼儿教育基金会</td>
+      <td>Fujian Department of Education</td>
+      <td>福建省教育厅</td>
+      <td>Taiwan</td>
+      <td>Education, International Relations/Exchange, Youth</td>
+      <td>Fujian</td>
+      <td>2019-01-15</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Children’s Medical Foundation</td>
@@ -2729,6 +2751,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Kaohsiung Computer Association</td>
+      <td>台湾高雄市电脑商业同业公会</td>
+      <td>Fujian Department of Commerce</td>
+      <td>福建省商务厅</td>
+      <td>Taiwan</td>
+      <td>Trade</td>
+      <td>Fujian</td>
+      <td>2019-01-15</td>
+      <td>Fujian</td>
+    </tr>
+    <tr>
       <td>Kerry Group Kuok Foundation</td>
       <td>嘉里集团郭氏基金会</td>
       <td>Ministry of Civil Affairs</td>
@@ -2892,6 +2925,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>Anhui, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Xinjiang, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Korea-China Cultural Association</td>
+      <td>韩中文化协会</td>
+      <td>Chongqing Culture and Tourism Development Commission</td>
+      <td>重庆市文化和旅游发展委员会</td>
+      <td>South Korea</td>
+      <td>Arts and Culture, International Relations/Exchange, Media, Tourism, Trade</td>
+      <td>Chongqing</td>
+      <td>2019-01-22</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Korea-China Friendship Exchange Council</td>
@@ -4949,6 +4993,17 @@
       <td>Yunnan</td>
       <td>2017-07-27</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Zen Martial Arts International Federation</td>
+      <td>禅武国际联盟总会</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hungary</td>
+      <td>Arts and Culture, International Relations/Exchange, Sport</td>
+      <td>Guangdong</td>
+      <td>2019-01-18</td>
+      <td>Guangdong, Hebei, Henan, Shandong, Zhejiang</td>
     </tr>
     <tr>
       <td>Zhang Xueliang Foundation</td>
