--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -375,6 +375,17 @@
       <td>Sichuan</td>
     </tr>
     <tr>
+      <td>Association Generale Chine-Afrique (Zhejiang)</td>
+      <td>中国-非洲总商会</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Zhejiang</td>
+      <td>2019-02-26</td>
+      <td>Zhejiang</td>
+    </tr>
+    <tr>
       <td>Australia-China Economic Culture And Technology Development Cooperation</td>
       <td>澳中经济科技文化促进会</td>
       <td>Hunan Department of Science and Technology</td>
@@ -1576,7 +1587,7 @@
     <tr>
       <td>France Export Céréales</td>
       <td>法国粮食出口协会</td>
-      <td>State Grain and Reserves Administration (formerly State Administration of Grain)</td>
+      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
       <td>国家粮食局</td>
       <td>France</td>
       <td>Trade</td>
@@ -4469,7 +4480,7 @@
     <tr>
       <td>U.S. Grains Council</td>
       <td>美国谷物协会</td>
-      <td>State Grain and Reserves Administration (formerly State Administration of Grain)</td>
+      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
       <td>国家粮食局</td>
       <td>United States</td>
       <td>Trade</td>
@@ -4502,7 +4513,7 @@
     <tr>
       <td>U.S. Soybean Export Council (Beijing)</td>
       <td>美国大豆出口协会</td>
-      <td>State Grain and Reserves Administration (formerly State Administration of Grain)</td>
+      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
       <td>国家粮食局</td>
       <td>United States</td>
       <td>Trade</td>
@@ -4524,7 +4535,7 @@
     <tr>
       <td>U.S. Wheat Associates</td>
       <td>美国小麦协会</td>
-      <td>State Grain and Reserves Administration (formerly State Administration of Grain)</td>
+      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
       <td>国家粮食局</td>
       <td>United States</td>
       <td>Trade</td>
