--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -353,6 +353,17 @@
       <td>Beijing</td>
     </tr>
     <tr>
+      <td>Association Generale Chine-Afrique (Guangdong)</td>
+      <td>中国-非洲总商会</td>
+      <td>Guandong Department of Commerce</td>
+      <td>广东省商务厅</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Guangdong</td>
+      <td>2019-03-06</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
       <td>Association Generale Chine-Afrique (Liaoning)</td>
       <td>中国-非洲总商会</td>
       <td>Liaoning Department of Commerce</td>
@@ -619,17 +630,6 @@
     <tr>
       <td>Casa Ricci Social Services</td>
       <td>利玛窦社会服务基金会</td>
-      <td>Sichuan Health Commission (formerly Sichuan Health and Family Planning Commission)</td>
-      <td>四川省卫生和计划生育委员会</td>
-      <td>Macau</td>
-      <td>Health, Poverty Alleviation</td>
-      <td>Sichuan</td>
-      <td>2018-07-24</td>
-      <td>Sichuan</td>
-    </tr>
-    <tr>
-      <td>Casa Ricci Social Services</td>
-      <td>利玛窦社会服务基金会</td>
       <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
       <td>云南省卫生和计划生育委员会</td>
       <td>Macau</td>
@@ -637,6 +637,17 @@
       <td>Yunnan</td>
       <td>2017-04-10</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Casa Ricci Social Services</td>
+      <td>利玛窦社会服务基金会</td>
+      <td>Sichuan Health Commission (formerly Sichuan Health and Family Planning Commission)</td>
+      <td>四川省卫生和计划生育委员会</td>
+      <td>Macau</td>
+      <td>Health, Poverty Alleviation</td>
+      <td>Sichuan</td>
+      <td>2018-07-24</td>
+      <td>Sichuan</td>
     </tr>
     <tr>
       <td>Caterpillar Foundation</td>
@@ -911,7 +922,7 @@
       <td>Trade</td>
       <td>Shandong</td>
       <td>2017-10-19</td>
-      <td>Unknown</td>
+      <td>Shandong</td>
     </tr>
     <tr>
       <td>China-Britain Business Council (Shanghai)</td>
@@ -2407,7 +2418,7 @@
       <td>Animal Protection, Environment</td>
       <td>Beijing</td>
       <td>2017-08-15</td>
-      <td>Anhui, Beijing, Gansu, Guizhou, Hainan, Hebei, Heilongjiang, Hubei, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang, Unknown</td>
+      <td>Anhui, Beijing, Gansu, Guizhou, Hainan, Hebei, Heilongjiang, Hubei, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>International Development &amp; Educational Associates (IDEAS)</td>
@@ -2584,6 +2595,17 @@
       <td>Beijing</td>
       <td>2017-05-19</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Japan Grain Inspection Association</td>
+      <td>日本榖物检定协会</td>
+      <td>General Administration of Customs</td>
+      <td>中华人民共和国海关总署</td>
+      <td>Japan</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2019-03-05</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Japan International Cooperation Center</td>
