--- a/piece/PSUrestructure/NewPSUTable.html
+++ b/piece/PSUrestructure/NewPSUTable.html
@@ -82,26 +82,68 @@ font-style: italic;
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
-
-<thead><tr class="tableizer-firstrow"><th>Organization Name (English)</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Activity Name (English)</th><th>Activity Name (Chinese)</th><th>Chinese Partner Unit (English)</th><th>Chinese Partner Unit (Chinese)</th><th>Activity Location (English)</th><th>Activity Location (Chinese)</th><th>Dates of First Temporary Activity</th><th>Dates of Second Temporary Activity</th></tr></thead><tbody>
- <tr><td>MISEREOR Foundation</td><td>德国米苏尔社会发展基金会</td><td>Germany</td><td>Public Welfare Professionals Ningxia Community Development Project</td><td>公益同行 宁夏社区发展计划</td><td>China Foundation for Poverty Alleviation</td><td>中国扶贫基金会</td><td>Ningxia Hui Autonomous Region</td><td>宁夏回族自治区</td><td>2017-12-01—2018-11-30</td><td>2018-12-01—2019-11-30</td></tr>
- <tr><td>U-Hearts</td><td>两地一心</td><td>Hong Kong</td><td>Poverty Allevation Financial Aid Visits</td><td>「两地一心」扶贫助学探访</td><td>Yunnan Huashang Charitable Foundation</td><td>云南华商公益基金会</td><td>Yunnan Province</td><td>云南省</td><td>2018-04-20—2018-10-31</td><td>2018-12-07—2019-12-06</td></tr>
- <tr><td>Barry & Martin's Trust</td><td>贝利•马丁基金会</td><td>United Kingdom</td><td>Medical Treatment Assistance Activity with Dali No. 2 People's Hospital</td><td>英国贝利马丁基金会与大理市第二人民医院医疗救助活动</td><td>Dali No. 2 People's Hospital</td><td>大理市第二人民医院</td><td>Yunnan Province</td><td>云南省</td><td>2018-01-20—2018-12-31</td><td>2019-01-01—2019-12-31</td></tr>
- <tr><td>Bread for the World</td><td>粮惠世界</td><td>Germany</td><td>Program to Improve the Ability of Impoverished Women in Turpan to Find Employment</td><td>吐鲁番地区贫困妇女就业能力提升项目</td><td>China Association for NGO Cooperation (CANGO)</td><td>中国国际民间组织合作促进会</td><td>Xinjiang Uighur Autonomous Region</td><td>新疆维吾尔自治区</td><td>2017-07-15—2018-07-14</td><td>2018-08-29—2019-06-30</td></tr>
- <tr><td>Hong Kong PHAB Association</td><td>摘星计划</td><td>Hong Kong</td><td>S.T.A.R. Project's 2017 Operation Student Financial Aid</td><td>摘星计划2017年助学启动</td><td>Guangxi Zhuang Autonomous Region, Teng County Middle School</td><td>广西壮族自治区藤县中学</td><td>Guangxi Zhuang Autonomous Region</td><td>广西壮族自治区</td><td>2017-08-03—2018-08-02</td><td>2018-08-20—2019-08-19</td></tr>
- <tr><td>China Candlelight Educational Fund Ltd.</td><td>中国烛光教育基金有限公司</td><td>Hong Kong</td><td>Yunfu City Disadvantaged Students Scholarship Disbursement</td><td>云浮市特困学生助学金派发</td><td>Yunfu City Communist Youth League Committee</td><td>中国共产主义青年团云浮市委员会</td><td>Guangdong Province</td><td>广东省</td><td>2017-12-19—2018-08-31</td><td>2018-09-01—2019-08-31</td></tr>
- <tr><td>Virya Foundation Limited</td><td>精进基金有限公司</td><td>Hong Kong</td><td>Sichuan Liangshan Female Students Financial Aid Project</td><td>四川凉山女童助学专案</td><td>Beichuan Qiang Autonomous County "Big Fish" Youth Development Center</td><td>北川羌族自治县大鱼青少年公益发展中心</td><td>Sichuan Province</td><td>四川省</td><td>2017-11-15—2018-08-31</td><td>2018-10-25—2019-08-31</td></tr>
- <tr><td>Chinese YMCA of Hong Kong</td><td>香港中华基督教青年会</td><td>Hong Kong</td><td>No. 3 Sparking Light—Yunnan Mobile Classroom</td><td>燃亮三号-云南流动教室</td><td>Kunming City Youth Volunteer Association</td><td>昆明市青年志愿者协会</td><td>Yunnan Province (Kunming City, Luquan County)</td><td>昆明市禄劝县</td><td>2017-10-09—2017-12-31</td><td>2018-01-22—2018-12-31</td></tr>
- <tr><td>Tsinghua Education Foundation North America</td><td>清华北美教育基金会</td><td>United States</td><td>Tsinghua University Schwarzman Project</td><td>清华大学苏世民项目</td><td>Tsinghua University Education Foundation</td><td>清华大学教育基金会</td><td>China</td><td>中国大陆</td><td>2017-10-01—2018-09-30</td><td>2018-11-01—2019-10-31</td></tr>
- <tr><td>Wu Wei Harmony Foundation</td><td>无为和谐基金会</td><td>United States</td><td>Scholarship Program for Underprivileged but Excellent Students in Yilong County</td><td>仪陇清寒优秀学生奖学金项目</td><td>Yilong County Rural Development Association</td><td>仪陇县乡村发展协会</td><td>Sichuan Province</td><td>四川省</td><td>2018-04-15—2018-08-31</td><td>2018-09-01—2019-08-31</td></tr>
- <tr><td>Aide et Action</td><td>爱达迅教育基金会有限公司</td><td>Switzerland</td><td>Women's Continuing Education Development Program</td><td>妇女继续教育发展项目</td><td>Chengdu City Ai Da Xun Social Work Service Center</td><td>成都爱达迅社会工作服务中心</td><td>Sichuan Province</td><td>四川省</td><td>2018-09-10—2018-12-31</td><td>2019-01-01—2019-12-31</td></tr>
- <tr><td>Asia Injury Prevention Foundation</td><td>亚洲伤害预防基金会</td><td>Vietnam</td><td>"Love Life, Walk Safely" Street-Crossing Safety Education Activity</td><td>"珍爱生命，安全出行"道路安全教育项目</td><td>Sichuan Technology Poverty Alleviation Foundation</td><td>四川省科技扶贫基金会</td><td>Sichuan Province</td><td>四川省</td><td>2017-11-16—2018-11-16</td><td>2019-01-22—2019-11-22</td></tr>
- <tr><td>The Hong Kong Rehabilitation Society</td><td>香港復康會</td><td>Hong Kong</td><td>Qinghai Province Community Rehabilitation Capacity-Building Project</td><td>青海省社区康复能力建设项目</td><td>Qinghai Association of Rehabilitation Medicine</td><td>青海省康复医学会</td><td>Qinghai Province</td><td>青海省</td><td>2018-01-25—2018-11-01</td><td>2018-12-12—2019-11-01</td></tr>
- <tr><td>The Mitsubishi UFJ Scholarship Trust Foundation</td><td>公益财团法人三菱UFJ国际财团</td><td>Japan</td><td>2018 Mitsubishi UFJ Bank Limited Scholarship</td><td>2018三菱日联银行奖学金</td><td>Peking University Education Foundation</td><td>北京大学教育基金会</td><td>Beijing City</td><td>北京市</td><td>2018-09-01—2019-08-31</td><td>2017-10-30—2018-10-29</td></tr>
- <tr><td>Chang Yung-fa Foundation</td><td>财团法人张荣发基金会</td><td>Taiwan</td><td>Peking University "Friend of Beida" Chang Yung-fa Financial Aid Scholarship and Related Activities Series</td><td>北京大学北大之友-张荣发助学金及系列相关活动</td><td>Peking University Education Foundation</td><td>北京大学教育基金会</td><td>Beijing City</td><td>北京市</td><td>2018-12-01—2019-09-01</td><td>2017-12-20—2018-12-20</td></tr>
- <tr><td>Hong Kong Bar Association</td><td>香港大律师公会</td><td>Hong Kong</td><td>Peking University Law School Common Law Course Scholarship</td><td>北京大学法学院普通法课程奖学金</td><td>Peking University Education Foundation</td><td>北京大学教育基金会</td><td>Beijing City</td><td>北京市</td><td>2018-08-10—2019-08-09</td><td>2017-11-14—2018-11-13</td></tr>
- <tr><td>Korean-Chinese Culture Youth Association (Future Forest)</td><td>韩中文化青少年协会（未来林）</td><td>South Korea</td><td>Group for Saving the Planet's Green Workcamp</td><td>拯救地球绿色团Workcamp</td><td>Dalad Banner Chinese Communist Youth League Committee</td><td>中国共产主义青年团达拉特旗委员会</td><td>Inner Mongolia Autonomous Region</td><td>内蒙古自治区</td><td>2017-04-15—2017-12-31</td><td>2018-04-21—2019-04-21</td></tr>
- <tr><td>Rural Impact Professionals Ltd.</td><td>为普顾问有限公司</td><td>Hong Kong</td><td>Education Financial Aid to Show Care for the Most Impoverished among Yilong County's Impoverished Villages' Left-Behind Children</td><td>仪陇县贫困乡村留守儿童中特困儿童关爱陪伴助学项目</td><td>Yilong County Rural Development Association</td><td>仪陇县乡村发展协会</td><td>Sichuan Province</td><td>四川省</td><td>2018-05-10—2018-08-31</td><td>2018-09-01—2019-08-31</td></tr>
+<table class="tableizer-table">
+<thead><tr class="tableizer-firstrow"><th>Previous Name (English)</th><th>Previous Name (Chinese)</th><th>Updated Name (English)</th><th>Updated Name (Chinese)</th><th>Other Notes</th></tr></thead><tbody>
+ <tr><td>All-China Federation of Trade Unions</td><td>中华全国总工会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>All-China Women's Federation</td><td>中华全国妇女联合会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>All-China Youth Federation**</td><td>中华全国青年联合会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>China Association for Science and Technology</td><td>中国科学技术协会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>China Banking Regulatory Commission</td><td>中国银监会</td><td>China Banking and Insurance Regulatory Commission</td><td>中国银行保险监督管理委员会</td><td>&nbsp;</td></tr>
+ <tr><td>China Disabled Persons' Federation</td><td>中国残疾人联合会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>China Food and Drug Administration</td><td>&nbsp;</td><td>State Administration for Market Regulation</td><td>国家市场监督管理总局</td><td>&nbsp;</td></tr>
+ <tr><td>China Insurance Regulatory Commission</td><td>保监会</td><td>China Banking and Insurance Regulatory Commission</td><td>中国银行保险监督管理委员会</td><td>&nbsp;</td></tr>
+ <tr><td>China Meteorological Administration</td><td>中国气象局</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>China Securities Regulatory Commission</td><td>中国证监会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Chinese Association for International Understanding**†</td><td>中国国际交流协会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Chinese People's Association for Friendship with Foreign Countries**</td><td>中国人民对外友好协会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Civil Aviation Administration of China**</td><td>中国民航局</td><td>N/A</td><td>N/A</td><td>Under the Ministry of Transport (交通运输部).</td></tr>
+ <tr><td>Communist Youth League of China**</td><td>中国共产主义青年团</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Cyberspace Administration of China</td><td>国家互联网信息办公室</td><td>N/A</td><td>N/A</td><td>Same as the Office of the CPCCC Cyberspace Affairs Commission (中共中央网络安全和信息化委员会办公室)</td></tr>
+ <tr><td>General Administration of Customs**</td><td>海关总署</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>General Administration of Quality Supervision, Inspection, and Quarantine</td><td>国家质检总局</td><td>State Administration for Market Regulation</td><td>国家市场监督管理总局</td><td>&nbsp;</td></tr>
+ <tr><td>General Administration of Sport</td><td>国家体育总局</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Agriculture</td><td>农业部</td><td>Ministry of Agriculture and Rural Affairs</td><td>农业农村部</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>N/A</td><td>N/A</td><td>Veterans' settlement responsibilities given to Ministry of Veterans Affairs (退役军人事务部); emergency management responsibilities given to Ministry of Emergency Management (应急管理部); responsibility for managing material reserves and grain given to State Administration of Grain and Material Reserves. China Association on Aging (previously under the Ministry of Civil Affairs) now subsumed under National Health Commission.</td></tr>
+ <tr><td>Ministry of Commerce</td><td>商务部</td><td>N/A</td><td>N/A</td><td>Outreach responsibilities given to the International Development Cooperation Agency (国家国际发展合作署); antitrust responsibilities given to National Food and Strategic Reserves Administration (国家市场监督管理总局).</td></tr>
+ <tr><td>Ministry of Culture</td><td>文化部</td><td>Ministry of Culture and Tourism</td><td>文化和旅游部</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Education</td><td>教育部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Environmental Protection</td><td>环境保护部</td><td>Ministry of Ecology and Environment</td><td>生态环境部</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Finance</td><td>财政部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Foreign Affairs**</td><td>外交部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Housing and Urban-Rural Development</td><td>住房城乡建设部</td><td>N/A</td><td>N/A</td><td>Responsibility for managing nature reserves, scenic areas, natural heritage, and geologic parks given to National Forestry and Grassland Administration (国家林业和草原局)</td></tr>
+ <tr><td>Ministry of Human Resources and Social Security</td><td>人力资源社会保障部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Industry and Information Technology</td><td>工业和信息化部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Justice</td><td>司法部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Land and Resources**</td><td>国土资源部</td><td>Ministry of Natural Resources</td><td>自然资源部</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Science and Technology</td><td>科技部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Transport</td><td>交通运输部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Ministry of Water Resources</td><td>水利部</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>National Audit Office</td><td>审计署</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>National Bureau of Statistics</td><td>国家统计局</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>National Copyright Administration†</td><td>国家版权局</td><td>Subsumed by the Central Propaganda Department (中共中央宣传部), though the name National Copyright Administration, under the State Press and Publication Administration (国家新闻出版署), will continue to be used internationally.</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+ <tr><td>National Development and Reform Commission</td><td>国家发展改革委</td><td>N/A</td><td>N/A</td><td>Climate change and emission reduction responsibilities given to the Ministry of Ecology and Environment (生态环境部).</td></tr>
+ <tr><td>National Energy Administration</td><td>国家能源局</td><td>N/A</td><td>N/A</td><td>Under the National Development and Reform Commission (国家发展和改革委员会).</td></tr>
+ <tr><td>National Health and Family Planning Commission</td><td>国家卫生计生委</td><td>National Health Commission</td><td>国家卫生健康委员会</td><td>&nbsp;</td></tr>
+ <tr><td>National Tourism Administration</td><td>国家旅游局</td><td>Ministry of Culture and Tourism</td><td>文化和旅游部</td><td>&nbsp;</td></tr>
+ <tr><td>Overseas Chinese Affairs Office of the State Council</td><td>国务院侨办</td><td>Subsumed by the United Front Work Department (中共中央统一战线工作部), though the name Overseas Chinese Affairs Office of the State Council will continue to be used internationally.</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+ <tr><td>People's Bank of China</td><td>中国人民银行</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Shanghai Institutes for International Studies**†</td><td>上海国际问题研究院</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>Standardization Administration of the People's Republic of China**‡</td><td>国家标准化管理委员会</td><td>Subsumed by the State Administration for Market Regulation (国家市场监督管理总局), though the name Standardization Administration of the People's Republic of China will continue to be used internationally.</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+ <tr><td>State Administration of Grain**</td><td>国家粮食局</td><td>National Food and Strategic Reserves Administration</td><td>国家粮食和物资储备局</td><td>Under the National Development and Reform Commission (国家发展和改革委员会).</td></tr>
+ <tr><td>State Administration for Industry and Commerce</td><td>国家工商行政管理总局</td><td>State Administration for Market Regulation</td><td>国家市场监督管理总局</td><td>&nbsp;</td></tr>
+ <tr><td>State Administration of Cultural Heritage</td><td>国家文物局</td><td>N/A</td><td>N/A</td><td>Under the Ministry of Culture and Tourism (文化和旅游部).</td></tr>
+ <tr><td>State Administration of Foreign Experts Affairs</td><td>国家外国专家局</td><td>Subsumed by the Ministry of Science and Technology (科技部), though the name State Administration of Foreign Experts Affairs will continue to be used internationally.</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+ <tr><td>State Administration of Press, Publication, Radio, Film and Television</td><td>国家新闻出版广电总局</td><td>State Administration of Radio and Television</td><td>国家广播电视总局</td><td>&nbsp;</td></tr>
+ <tr><td>State Administration of Taxation</td><td>国家税务总局</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>State Administration of Traditional Chinese Medicine</td><td>国家中医药管理局</td><td>N/A</td><td>N/A</td><td>Under the National Health Commission (国家卫生健康委员会)</td></tr>
+ <tr><td>State Administration of Work Safety</td><td>国家安全监管总局</td><td>Ministry of Emergency Management</td><td>应急管理部</td><td>Work safety and health responsibilities given to National Health Commission (国家卫生健康委员会).</td></tr>
+ <tr><td>State Council Leading Group Office of Poverty Alleviation and Development</td><td>国务院扶贫办</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>State Council Taiwan Affairs Office**</td><td>国务院台湾事务办公室</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>State Ethnic Affairs Commission**</td><td>国家民族事务委员会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
+ <tr><td>State Forestry Administration</td><td>国家林业局</td><td>National Forestry and Grassland Administration</td><td>国家林业和草原局</td><td>Under the Ministry of Natural Resources (自然资源部). Also known as the National Park Administration (国家公园管理局).</td></tr>
+ <tr><td>State Intellectual Property Office</td><td>国家知识产权局</td><td>N/A</td><td>N/A</td><td>Under the State Administration for Market Regulation (国家市场监督管理总局)</td></tr>
+ <tr><td>State Oceanic Administration</td><td>国家海洋局</td><td>Subsumed by the Ministry of Natural Resources (自然资源部), though the name State Oceanic Administration will continue to be used internationally.</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+ <tr><td>State Post Bureau</td><td>国家邮政局</td><td>N/A</td><td>N/A</td><td>Under the Ministry of Transport (交通运输部).</td></tr>
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
