--- a/piece/PSUrestructure/NewPSUTable.html
+++ b/piece/PSUrestructure/NewPSUTable.html
@@ -79,10 +79,10 @@ font-style: italic;
 
 
 
-
+<table class="sortable">
 <!–– add your tableizer data below this line––>
 
-<table class="tableizer-table">
+
 <thead><tr class="tableizer-firstrow"><th>Previous Name (English)</th><th>Previous Name (Chinese)</th><th>Updated Name (English)</th><th>Updated Name (Chinese)</th><th>Other Notes</th></tr></thead><tbody>
  <tr><td>All-China Federation of Trade Unions</td><td>中华全国总工会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
  <tr><td>All-China Women's Federation</td><td>中华全国妇女联合会</td><td>N/A</td><td>N/A</td><td>&nbsp;</td></tr>
