--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2113,6 +2113,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Hong Kong and Macau Jiangsu Chamber of Commerce</td>
+      <td>澳门江苏商会江苏代表处</td>
+      <td>Jiangsu Department of Commerce</td>
+      <td>江苏省商务厅</td>
+      <td>Macau</td>
+      <td>Trade</td>
+      <td>Jiangsu</td>
+      <td>2019-03-12</td>
+      <td>Jiangsu</td>
+    </tr>
+    <tr>
       <td>Hong Kong Federation of Youth Groups</td>
       <td>香港青年协会</td>
       <td>Guangdong Youth Federation</td>
@@ -2353,6 +2364,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>Beijing, Guangdong, Jiangsu, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International China Concern</td>
+      <td>国际关心中国慈善协会有限公司（中国香港）湖南代表处</td>
+      <td>Hunan Department of Civil Affairs</td>
+      <td>湖南省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building</td>
+      <td>Hunan</td>
+      <td>2019-03-11</td>
+      <td>Hunan</td>
     </tr>
     <tr>
       <td>International Confederation of Societies of Authors and Composers</td>
