--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -364,6 +364,17 @@
       <td>Guangdong</td>
     </tr>
     <tr>
+      <td>Association Generale Chine-Afrique (Heilongjiang</td>
+      <td>中国-非洲总商会</td>
+      <td>Heilongjiang Department of Commerce</td>
+      <td>黑龙江省商务厅</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Heilongjiang</td>
+      <td>2019-03-22</td>
+      <td>Heilongjiang</td>
+    </tr>
+    <tr>
       <td>Association Generale Chine-Afrique (Liaoning)</td>
       <td>中国-非洲总商会</td>
       <td>Liaoning Department of Commerce</td>
@@ -2114,7 +2125,7 @@
     </tr>
     <tr>
       <td>Hong Kong and Macau Jiangsu Chamber of Commerce</td>
-      <td>澳门江苏商会江苏代表处</td>
+      <td>澳门江苏商会</td>
       <td>Jiangsu Department of Commerce</td>
       <td>江苏省商务厅</td>
       <td>Macau</td>
@@ -2367,7 +2378,7 @@
     </tr>
     <tr>
       <td>International China Concern</td>
-      <td>国际关心中国慈善协会有限公司（中国香港）湖南代表处</td>
+      <td>国际关心中国慈善协会有限公司</td>
       <td>Hunan Department of Civil Affairs</td>
       <td>湖南省民政厅</td>
       <td>Hong Kong</td>
@@ -3805,6 +3816,17 @@
       <td>Tianjin</td>
       <td>2017-05-12</td>
       <td>Tianjin</td>
+    </tr>
+    <tr>
+      <td>Prince Albert II of Monaco Foundation</td>
+      <td>摩纳哥阿尔贝二世亲王基金会</td>
+      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
+      <td>生态环境部</td>
+      <td>Monaco</td>
+      <td>Energy, Environment</td>
+      <td>Bejing</td>
+      <td>2019-03-25</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Project HOPE (Beijing)</td>
