--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -364,7 +364,7 @@
       <td>Guangdong</td>
     </tr>
     <tr>
-      <td>Association Generale Chine-Afrique (Heilongjiang</td>
+      <td>Association Generale Chine-Afrique (Heilongjiang)</td>
       <td>中国-非洲总商会</td>
       <td>Heilongjiang Department of Commerce</td>
       <td>黑龙江省商务厅</td>
@@ -779,6 +779,17 @@
       <td>Education, International Relations/Exchange, Youth</td>
       <td>Fujian</td>
       <td>2019-01-15</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Children’s Investment Fund Foundation (CIFF)</td>
+      <td>儿童投资基金会</td>
+      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
+      <td>生态环境部</td>
+      <td>United Kingdom</td>
+      <td>Education, Energy, Environment</td>
+      <td>Beijing</td>
+      <td>2019-03-29</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3824,7 +3835,7 @@
       <td>生态环境部</td>
       <td>Monaco</td>
       <td>Energy, Environment</td>
-      <td>Bejing</td>
+      <td>Beijing</td>
       <td>2019-03-25</td>
       <td>China</td>
     </tr>
@@ -4245,6 +4256,17 @@
       <td>Yunnan</td>
       <td>2017-12-14</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Special Olympics</td>
+      <td>特殊奥林匹克组织</td>
+      <td>China Disabled Person’s Federation</td>
+      <td>中国残疾人联合会</td>
+      <td>United States</td>
+      <td>Disabilities, Sport, Youth</td>
+      <td>Beijing</td>
+      <td>2019-03-29</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>SportAccord Asia-Pacific Headquarters</td>
