--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1882,6 +1882,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Green-Net</td>
+      <td>绿化网络</td>
+      <td>Inner Mongolia Forestry and Grassland Administration (formerly Inner Mongolia Forestry Administration)</td>
+      <td>内蒙古自治区林业厅</td>
+      <td>Japan</td>
+      <td>Environment</td>
+      <td>Inner Mongolia</td>
+      <td>2019-04-02</td>
+      <td>Inner Mongolia</td>
+    </tr>
+    <tr>
       <td>Guangxi Business Association of Canada</td>
       <td>加拿大广西总商会</td>
       <td>Guangxi Department of Commerce</td>
@@ -4698,6 +4709,17 @@
       <td>Beijing</td>
     </tr>
     <tr>
+      <td>United Strength Organization</td>
+      <td>协力会</td>
+      <td>Health Commission of Yunnan Province</td>
+      <td>云南省卫生健康委员会</td>
+      <td>Norway</td>
+      <td>Civil Society Capacity-Building, Disabilities, Health</td>
+      <td>Yunnan</td>
+      <td>2019-04-04</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
       <td>United Way Worldwide</td>
       <td>全球联合之路</td>
       <td>Shanghai Bureau of Civil Affairs</td>
@@ -4795,6 +4817,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Viva China Children's Cancer Foundation</td>
+      <td>活泼中国儿童癌症基金会</td>
+      <td>Shanghai Municipal Health Commission</td>
+      <td>上海市卫生健康委员会</td>
+      <td>Hong Kong</td>
+      <td>Health, Youth</td>
+      <td>Shanghai</td>
+      <td>2019-04-08</td>
+      <td>Shanghai</td>
     </tr>
     <tr>
       <td>Water Quality Association</td>
