--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -397,6 +397,17 @@
       <td>Sichuan</td>
     </tr>
     <tr>
+      <td>Association Generale Chine-Afrique (Yunnan)</td>
+      <td>中国-非洲总商会（马达加斯加）昆明代表处</td>
+      <td>Yunnan Department of Commerce</td>
+      <td>云南省商务厅</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Yunnan</td>
+      <td>2019-04-09</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
       <td>Association Generale Chine-Afrique (Zhejiang)</td>
       <td>中国-非洲总商会</td>
       <td>Zhejiang Department of Commerce</td>
@@ -3565,7 +3576,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>North Korea International Trade Promotion Council</td>
+      <td>North Korea International Trade Promotion Council (Jilin)</td>
       <td>朝鲜国际贸易促进委员会</td>
       <td>Jilin Department of Commerce</td>
       <td>吉林省商务厅</td>
@@ -3574,6 +3585,17 @@
       <td>Jilin</td>
       <td>2018-04-03</td>
       <td>Jilin</td>
+    </tr>
+    <tr>
+      <td>North Korea International Trade Promotion Council (Liaoning)</td>
+      <td>朝鲜民主主义人民共和国国际贸易促进委员会</td>
+      <td>Liaoning Department of Commerce</td>
+      <td>辽宁省商务厅</td>
+      <td>North Korea</td>
+      <td>Trade</td>
+      <td>Liaoning</td>
+      <td>2019-04-11</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>NPES The Association for Suppliers of Printing, Publishing and Converting Technologies</td>
