--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2344,6 +2344,17 @@
       <td>Beijing, Gansu, Guangdong, Guangxi, Guizhou, Heilongjiang, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Intercoiffure Mondial (ICD)</td>
+      <td>世界发型设计家协会</td>
+      <td>Shandong Department of Commerce</td>
+      <td>省商务厅</td>
+      <td>France</td>
+      <td>Trade</td>
+      <td>Shandong</td>
+      <td>2019-04-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Interkultur</td>
       <td>香港国际文化融合基金会</td>
       <td>Jiangsu Department of Culture and Tourism (formerly Jiangsu Department of Culture)</td>
@@ -4806,6 +4817,17 @@
       <td>Jilin</td>
       <td>2018-09-04</td>
       <td>Jilin</td>
+    </tr>
+    <tr>
+      <td>USA China Entrepreneurs Association (Shandong)</td>
+      <td>美国中国企业家协会</td>
+      <td>Shandong Department of Commerce</td>
+      <td>山东省商务厅</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shandong</td>
+      <td>2019-04-19</td>
+      <td>Shandong</td>
     </tr>
     <tr>
       <td>USA Poultry and Egg Export Council</td>
