--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2619,6 +2619,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>International Zinc Association (Shanghai)</td>
+      <td>国际锌协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2019-04-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>IRU</td>
       <td>国际道路运输联盟</td>
       <td>Beijing Commission of Transport</td>
@@ -4819,6 +4830,17 @@
       <td>Jilin</td>
     </tr>
     <tr>
+      <td>USA China Entrepreneurs Association (Qingdao)</td>
+      <td>美国中国企业家协会</td>
+      <td>Shandong Department of Commerce</td>
+      <td>山东省商务厅</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shandong</td>
+      <td>2019-04-23</td>
+      <td>Shandong</td>
+    </tr>
+    <tr>
       <td>USA China Entrepreneurs Association (Shandong)</td>
       <td>美国中国企业家协会</td>
       <td>Shandong Department of Commerce</td>
@@ -4839,6 +4861,17 @@
       <td>Shanghai</td>
       <td>2017-04-01</td>
       <td>Anhui, Chongqing, Guizhou, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>USDA China (Shanghai)</td>
+      <td>美国碧根果种植者协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2019-04-30</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>VDMA</td>
