--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -199,6 +199,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>American Academy of Anti-Aging Medicine</td>
+      <td>美国抗衰老医学会</td>
+      <td>Hainan Health Commission</td>
+      <td>海南省卫生健康委员会</td>
+      <td>United States</td>
+      <td>Aging, Health</td>
+      <td>Hainan</td>
+      <td>2019-05-09</td>
+      <td>Hainan</td>
+    </tr>
+    <tr>
       <td>American Heart Association</td>
       <td>美国心脏协会</td>
       <td>Ministry of Science and Technology</td>
@@ -1549,6 +1560,17 @@
       <td>Economic Development, International Relations/Exchange, Sport</td>
       <td>Beijing</td>
       <td>2017-04-26</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Fédération Internationale des Véhicules Anciens (FIVA)</td>
+      <td>国际老式车辆联合会</td>
+      <td>Guangdong Department of Commerce</td>
+      <td>广东省商务厅</td>
+      <td>Italy</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade</td>
+      <td>Guangdong</td>
+      <td>2019-05-07</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3224,6 +3246,17 @@
       <td>Guangdong</td>
     </tr>
     <tr>
+      <td>Malaysia-China Friendship Association</td>
+      <td>马中友好协会</td>
+      <td>Hunan Department of Commerce</td>
+      <td>湖南省商务厅</td>
+      <td>Malaysia</td>
+      <td>Arts and Culture, Education, Sport, Trade</td>
+      <td>Hunan</td>
+      <td>2019-05-06</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Malaysian Palm Oil Council</td>
       <td>马来西亚棕榈油委员会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -4445,6 +4478,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>Taiwan Taizhong Cross-Straight Sentiment Economic and Trade Exchange Association</td>
+      <td>台湾台中市两岸情经贸交流协会</td>
+      <td>Fujian Department of Commerce</td>
+      <td>福建省商务厅</td>
+      <td>Taiwan</td>
+      <td>Agriculture, Arts and Culture, Economic Development, International Relations/Exchange, Tourism, Trade</td>
+      <td>Fujian</td>
+      <td>2019-05-07</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Taiwan Trade Center (Guangdong)</td>
       <td>台湾贸易中心</td>
       <td>Guangdong Department of Commerce</td>
@@ -5180,6 +5224,17 @@
       <td>Sichuan</td>
       <td>2017-11-21</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Xuan Yuan Education Fund Association</td>
+      <td>轩辕教育基金会</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Aging, Education, Health, Infrastructure, Poverty Alleviation, Rural Issues/Development, Youth</td>
+      <td>Guangdong</td>
+      <td>2019-05-06</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Hebei, Heilongjiang, Henan, Hunan, Inner Mongolia, Jiangsu, Jilin, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Tianjin, Xinjiang, Yunnan</td>
     </tr>
     <tr>
       <td>Yamagata International Economic Development Support Organization</td>
