--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1948,6 +1948,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Gunuo Maijiside</td>
+      <td>贾诺•麦基斯得</td>
+      <td>Hunan Department of Science and Technology</td>
+      <td>湖南省科技厅</td>
+      <td>Italy</td>
+      <td>Trade</td>
+      <td>Hunan</td>
+      <td>2019-05-22</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Gwangju Economic and Hiring Revitalization Institute</td>
       <td>韩国（财）光州广域市经济雇佣振兴院</td>
       <td>Shanghai Commission of Commerce</td>
@@ -5050,7 +5061,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>World Future Foundation</td>
+      <td>World Future Council</td>
       <td>世界未来委员会基金会</td>
       <td>Ministry of Housing and Urban-Rural Development</td>
       <td>中华人民共和国住房与城乡建设部</td>
