--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -452,6 +452,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Austria-China Peaceful Reunification Promotion Association</td>
+      <td>奥地利中国和平统一促进会</td>
+      <td>Hunan Office of Overseas Chinese Affairs</td>
+      <td>湖南省人民政府侨务办公室</td>
+      <td>Austria</td>
+      <td>International Relations/Exchange</td>
+      <td>Hunan</td>
+      <td>2019-05-29</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Austrian Chinese Business Association</td>
       <td>澳中商业协会</td>
       <td>Hebei Department of Commerce</td>
@@ -3224,6 +3235,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Logistics Alliance Germany</td>
+      <td>德国物流联盟</td>
+      <td>Shanghai Commission of Transport</td>
+      <td>上海市交通委</td>
+      <td>Germany</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2019-05-31</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Love Without Borders Foundation</td>
       <td>爱心无国界基金会</td>
       <td>Anhui Health Commission (formerly Anhui Health and Family Planning Commission)</td>
@@ -4388,6 +4410,17 @@
       <td>Beijing</td>
       <td>2018-09-26</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Stepping Stones China Limited</td>
+      <td>铺路石中国有限公司</td>
+      <td>Shanghai Bureau of Civil Affairs</td>
+      <td>上海市民政局</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, Education, International Relations/Exchange</td>
+      <td>Shanghai</td>
+      <td>2019-05-31</td>
+      <td>Anhui, Gansu, Guizhou, Henan, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Stiftung Mercator</td>
