--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -5183,7 +5183,7 @@
     </tr>
     <tr>
       <td>Association Generale Chine-Afrique (Yunnan)</td>
-      <td>中国-非洲总商会（马达加斯加）昆明代表处</td>
+      <td>中国-非洲总商会</td>
       <td>Yunnan Department of Commerce</td>
       <td>云南省商务厅</td>
       <td>Madagascar</td>
@@ -5378,6 +5378,61 @@
       <td>Guangdong</td>
       <td>2019-06-12</td>
       <td>Guangdong</td>
+    </tr>
+    <tr>
+      <td>Overseas China Education Foundation</td>
+      <td>海外中国教育基金会</td>
+      <td>Guangxi Department of Education</td>
+      <td>广西省教育厅</td>
+      <td>United States</td>
+      <td>Education, Infrastructure, Poverty Alleviation, Youth</td>
+      <td>Guangxi</td>
+      <td>2019-06-19</td>
+      <td>Guangxi</td>
+    </tr>
+    <tr>
+      <td>United States Humane Society Charitable Foundation</td>
+      <td>美国仁社慈善基金会</td>
+      <td>Shaanxi Federation of Returned Overseas Chinese</td>
+      <td>陕西省归国华侨联合会</td>
+      <td>United States</td>
+      <td>Disaster Relief, Education, Poverty Alleviation, Youth</td>
+      <td>Shaanxi</td>
+      <td>2019-06-18</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Taiwan Trade Center (Beijing)</td>
+      <td>台湾贸易中心</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>Taiwan</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2019-06-17</td>
+      <td>Beijing, Gansu, Hebei, Inner Mongolia, Ningxia, Shanxi, Tianjin</td>
+    </tr>
+    <tr>
+      <td>National Geographic Society</td>
+      <td>国家地理学会</td>
+      <td>National Forestry and Grassland Administration (formerly State Forestry Administration)</td>
+      <td>国家林业和草原局</td>
+      <td>United States</td>
+      <td>Education, Environment, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2019-06-17</td>
+      <td>Beijing, Gansu, Guangdong, Hainan, Heilongjiang, Inner Mongolia, Jilin, Qinghai, Shaanxi, Shanghai, Shanxi, Sichuan, Yunnan</td>
+    </tr>
+    <tr>
+      <td>Center for Cross Cultural Service Limited</td>
+      <td>文化交流服务中心有限公司</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange</td>
+      <td>Guangdong</td>
+      <td>2019-06-14</td>
+      <td>Guangxi</td>
     </tr>
   </tbody>
 </table>
