--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1222,17 +1222,6 @@
       <td>Yunnan</td>
     </tr>
     <tr>
-      <td>Confederação Nacional do Transporte (CNT)</td>
-      <td>巴西全国运输联合会</td>
-      <td>Beijing Commission of Transport</td>
-      <td>北京市交通委员会</td>
-      <td>Brazil</td>
-      <td>Trade</td>
-      <td>Beijing</td>
-      <td>2017-11-28</td>
-      <td>Beijing</td>
-    </tr>
-    <tr>
       <td>Confederation of Indian Industry</td>
       <td>印度工业联合会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -1539,17 +1528,6 @@
       <td>Chongqing</td>
       <td>2018-11-09</td>
       <td>China</td>
-    </tr>
-    <tr>
-      <td>Europe-China Culture and Economy Commission</td>
-      <td>欧盟中国经济文化委员会</td>
-      <td>Henan Department of Commerce</td>
-      <td>河南省商务厅</td>
-      <td>Belgium</td>
-      <td>Arts and Culture, Economic Development, International Relations/Exchange, Trade, Urban Issues/Development</td>
-      <td>Henan</td>
-      <td>2017-08-04</td>
-      <td>Henan</td>
     </tr>
     <tr>
       <td>European American Chamber of Commerce and Industry</td>
@@ -3191,17 +3169,6 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>KYOTO Industrial Support Organization 21</td>
-      <td>日本公益财团法人京都产业21</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>Japan</td>
-      <td>Trade</td>
-      <td>Shanghai</td>
-      <td>2017-11-22</td>
-      <td>China</td>
-    </tr>
-    <tr>
       <td>Lake Biwa Tourism Promotion Association</td>
       <td>公益社团法人琵琶湖观光促进会</td>
       <td>Hunan People’s Government Office of Foreign Affairs</td>
@@ -3609,6 +3576,17 @@
       <td>Liaoning</td>
     </tr>
     <tr>
+      <td>Next-Town Foundation</td>
+      <td>下一城基金会</td>
+      <td>Henan Department of Education</td>
+      <td>河南省教育厅</td>
+      <td>United States</td>
+      <td>Education, Poverty Alleviation, Rural Issues/Development, Youth</td>
+      <td>Henan</td>
+      <td>2019-07-05</td>
+      <td>Henan</td>
+    </tr>
+    <tr>
       <td>Niigata City Industrial Revitalization Financial Group</td>
       <td>公益财团法人新潟市产业振兴财团</td>
       <td>Beijing Commission of Commerce</td>
@@ -3728,17 +3706,6 @@
       <td>Liaoning</td>
       <td>2019-04-11</td>
       <td>Liaoning</td>
-    </tr>
-    <tr>
-      <td>NPES The Association for Suppliers of Printing, Publishing and Converting Technologies</td>
-      <td>美国NPES全美印刷、出版和纸品加工技术供应商协会</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>United States</td>
-      <td>Trade</td>
-      <td>Shanghai</td>
-      <td>2017-12-08</td>
-      <td>China</td>
     </tr>
     <tr>
       <td>Okinawa Industrial Revitalization Commune (Beijing)</td>
@@ -5168,17 +5135,6 @@
       <td>Economic Development, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2017-01-23</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>World Future Council</td>
-      <td>世界未来委员会基金会</td>
-      <td>Ministry of Housing and Urban-Rural Development</td>
-      <td>中华人民共和国住房与城乡建设部</td>
-      <td>Germany</td>
-      <td>Energy, Environment, International Relations/Exchange, Law and Governance, Urban Issues/Development</td>
-      <td>Beijing</td>
-      <td>2018-07-09</td>
       <td>China</td>
     </tr>
     <tr>
