--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2080,6 +2080,17 @@
       <td>Beijing, Shaanxi, Yunnan</td>
     </tr>
     <tr>
+      <td>Hanns Seidel Foundation (Zhejiang)</td>
+      <td>德国汉斯•赛德尔基金会浙江代表处</td>
+      <td>Zhejiang Department of Education</td>
+      <td>浙江省教育厅</td>
+      <td>Germany</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Zhejiang</td>
+      <td>2019-07-12</td>
+      <td>Zhejiang</td>
+    </tr>
+    <tr>
       <td>Hanns Seidel Foundation (Beijing)</td>
       <td>汉斯·赛德尔基金会</td>
       <td>Ministry of Education</td>
