--- a/piece/PSUrestructure/NewPSUTable.html
+++ b/piece/PSUrestructure/NewPSUTable.html
@@ -92,6 +92,10 @@ font-style: italic;
   <body>
 
 
+    <div id="wrapper">
+    <div id="header"><h1>Xitongs (Functional Hierarchies) that Can Serve as Professional Supervisory Units, per MPS 2019 List</h1></div>
+    <div id='mapdiv'></div>
+    </div>
 
 
 <table class="sortable">
