--- a/piece/PSUrestructure/NewPSUTable.html
+++ b/piece/PSUrestructure/NewPSUTable.html
@@ -55,6 +55,13 @@ src: url('../fonts/Portrait-MediumItalic-Web.woff');
 font-weight: 500;
 font-style: italic;
 }
+	
+
+h1 {
+      font-family:DrukText;
+      font-size: 40px;
+      display: block;
+  }
 
         table.sortable thead {
             background-color:#eee;
